se agrega soporte para base de datos mariaDB y el manejo de ambiente a traves de multiples archivos properties

--- a/src/main/resources/application-dev-in-memory.properties
+++ b/src/main/resources/application-dev-in-memory.properties
@@ -19,3 +19,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 server.port=${PORT:5000}
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+
