se agrego el cambio para el soporte de auditoria, si hay mas de un usuario en el sistema el que aprueba debe ser uno distinto del que carga y una ves aprobado no se va a poder modificar

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,5 @@
+#Para usar este archivo setear la variable de JVM -Dspring.profiles.active con el valor DEV
+
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
 
@@ -29,6 +31,6 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.maxActive=8
-spring.jpa.hibernate.ddl-auto=none  
+#spring.jpa.hibernate.ddl-auto=none  
 #spring.jpa.hibernate.ddl-auto=create-drop
-
+spring.jpa.hibernate.ddl-auto=update
