se agrega los archivos eliminados a la auditoria

--- a/src/main/resources/application-default.properties
+++ b/src/main/resources/application-default.properties
@@ -26,6 +26,6 @@ spring.datasource.username=uh9ucpbl9drse54g
 spring.datasource.password=b1v2qyfxauy4pluo
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.maxActive=8
-spring.jpa.hibernate.ddl-auto=none  
 #spring.jpa.hibernate.ddl-auto=create-drop
-
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
