--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -31,6 +31,6 @@ spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.maxActive=8
-#spring.jpa.hibernate.ddl-auto=none  
+spring.jpa.hibernate.ddl-auto=validate  
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
