--- a/src/main/resources/application-dev-in-memory.properties
+++ b/src/main/resources/application-dev-in-memory.properties
@@ -21,5 +21,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=${PORT:5000}
 
 
-#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
