--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,3 +34,7 @@ spring.datasource.maxActive=8
 spring.jpa.hibernate.ddl-auto=validate  
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
