--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,10 @@
         </dependency>
         
         <dependency>
-    <groupId>org.hibernate</groupId>
-    <artifactId>hibernate-envers</artifactId>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-envers</artifactId>
     
-</dependency>
+        </dependency>
         
         
         <dependency>
@@ -53,10 +53,18 @@
             <scope>runtime</scope>
         </dependency>
         <!--Sacar esto luego de probar-->
+        <!--
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+            <version>2.3.5</version>
         </dependency>
+        -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
