--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,12 @@
     		<version>4.1.0</version>
 		</dependency>
 		
-
+		<dependency>
+	 	   <groupId>org.passay</groupId>
+			<artifactId>passay</artifactId>
+			<version>1.6.0</version>
+		</dependency>
+	
 
           
     </dependencies>
