--- a/pom.xml
+++ b/pom.xml
@@ -115,8 +115,23 @@
 			<version>1.6.0</version>
 		</dependency>
 	
+		<dependency>
+			<groupId>com.github.oshi</groupId>
+			<artifactId>oshi-core</artifactId>
+			<version>4.4.2</version>
+		</dependency>
+<dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
+        <version>5.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna-platform</artifactId>
+        <version>5.5.0</version>
+      </dependency>
 
-          
+
     </dependencies>
 
     <build>
